src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Giving_Type_Engine__c</fullName>
        <description>Rules used to determine the value of &apos;Calculated Giving Type&apos;.</description>
        <inlineHelpText>Rules used to determine the value of &apos;Calculated Giving Type&apos;.</inlineHelpText>
        <label>Giving Type Engine</label>
        <picklist>
            <picklistValues>
                <fullName>Public Media</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Type__c</fullName>
        <description>Giving Type is used to set values on Summary and Account. Can be set automatically based on Giving Type Rules or manually overridden. Manual overrides can only happen after the record has been saved.</description>
        <inlineHelpText>Giving Type is used to set values on Summary and Account. Can be set automatically based on Giving Type Rules or manually overridden. Manual overrides can only happen after the record has been saved.</inlineHelpText>
        <label>Giving Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Giving_Years__c</fullName>
        <description>Number of years in Pledge timeline. This field is not set directly but by a picklist in the Giving Wizard.</description>
        <inlineHelpText>Number of years in Pledge timeline. This field is not set directly but by a picklist in the Giving Wizard.</inlineHelpText>
        <label>Giving Years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grant_Purpose__c</fullName>
        <description>Summary of the purpose of the grant proposal that is one-paragraph. Include what, where, when, and why.</description>
        <inlineHelpText>Summary of the purpose of the grant proposal that is one-paragraph. Include what, where, when, and why.</inlineHelpText>
        <label>Grant Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grant_Requirements__c</fullName>
        <description>Link to grant requirements.</description>
        <inlineHelpText>Link to grant requirements.</inlineHelpText>
        <label>Grant Requirements</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grant_Type__c</fullName>
        <description>Type of Designation of Grant.</description>
        <inlineHelpText>Type of Designation of Grant.</inlineHelpText>
        <label>Grant Type</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Grantor_ID__c</fullName>
        <description>Internal ID of Grantor (use if not linked to Account).</description>
        <inlineHelpText>Internal ID of Grantor (use if not linked to Account).</inlineHelpText>
        <label>Grantor ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Hard_Credit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Account to receive the Giving Hard Credit.</description>
        <inlineHelpText>Specifies the Account to receive the Giving Hard Credit.</inlineHelpText>
        <label>Hard Credit Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Hard Credit Account)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Hard_Credit_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Contact to receive the Giving Hard Credit.</description>
        <inlineHelpText>Specifies the Contact to receive the Giving Hard Credit.</inlineHelpText>
        <label>Hard Credit Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Hard Credit Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Initial_Application_Submission_Format__c</fullName>
        <description>Method by which the initial application was received.</description>
        <inlineHelpText>Method by which the initial application was received.</inlineHelpText>
        <label>Initial Application Submission Format</label>
        <picklist>
            <picklistValues>
                <fullName>E-Grants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail-Hard Copy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Internal_Grant_ID__c</fullName>
        <description>Grant ID on initial application form.</description>
        <inlineHelpText>Grant ID on initial application form.</inlineHelpText>
        <label>Internal Grant ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving as Anonymous for constituents who do not want to be recognized publicly.</description>
        <inlineHelpText>Designates Giving as Anonymous for constituents who do not want to be recognized publicly.</inlineHelpText>
        <label>Anonymous?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Bookable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field indicates that this commitment should be booked to the GL</description>
        <inlineHelpText>Checking this field indicates that this commitment should be booked to the GL</inlineHelpText>
        <label>Bookable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are Canceled at the Pledge level. When this is ticked, all open transactions will be made Canceled.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are Canceled at the Pledge level. When this is ticked, all open transactions will be made Canceled.</inlineHelpText>
        <label>Force Canceled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are completed at the Pledge level. When this is ticked, all open transactions will be moved to Completed.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are completed at the Pledge level. When this is ticked, all open transactions will be moved to Completed.</inlineHelpText>
        <label>Force Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Donation Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Donation Pledge if set to true.</inlineHelpText>
        <label>Giving Donation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Inkind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Giving Inkind?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Membership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Membership Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Membership Pledge if set to true.</inlineHelpText>
        <label>Giving Membership?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Outright_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Outright Gift if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Outright Gift if set to true.</inlineHelpText>
        <label>Giving Outright Gift?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Pledge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Pledge if set to true.</inlineHelpText>
        <label>Giving Pledge?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically populated, designates an Opportunity record as a Giving Purchase if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Purchase if set to true.</inlineHelpText>
        <label>Giving Purchase?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates an Opportunity record as a Giving Transaction if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Transaction if set to true.</inlineHelpText>
        <label>Giving Transaction?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates an Opportunity record as a Giving Pledge if set to true.</description>
        <inlineHelpText>Designates an Opportunity record as a Giving Pledge if set to true.</inlineHelpText>
        <label>Giving?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Manual_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System auto checks this field when additional transaction is created manually i.e not reflecting the Giving Frequency</description>
        <inlineHelpText>System auto checks this field when additional transaction is created manually i.e not reflecting the Giving Frequency</inlineHelpText>
        <label>Is Manual Transaction?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Gift as Matching Gift.</description>
        <inlineHelpText>Designates Gift as Matching Gift.</inlineHelpText>
        <label>Matching?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Payment_Refunded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by trigger; indicates payment was refunded.</description>
        <inlineHelpText>Has this payment been refunded?</inlineHelpText>
        <label>Payment Refunded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Refundable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto populated, indicates if this Giving is refundable.</description>
        <inlineHelpText>Is this Giving refundable?</inlineHelpText>
        <label>Refundable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving as Restricted for constituents who do not want the donation to go to any allocation other than what is specified.</description>
        <inlineHelpText>Designates Giving as Restricted for constituents who do not want the donation to go to any allocation other than what is specified.</inlineHelpText>
        <label>Restricted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System-level field used on the UI side (visualforce pages) when a giving record needs to be selected for an action on a record-by-record basis</description>
        <inlineHelpText>System-level field used on the UI side (visualforce pages) when a giving record needs to be selected for an action on a record-by-record basis</inlineHelpText>
        <label>Selected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Shopper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates a Shopper gift, where associated Campaign is marked Shopper and Giving has Premiums associated.</description>
        <inlineHelpText>Designates a Shopper gift, where associated Campaign is marked Shopper and Giving has Premiums associated.</inlineHelpText>
        <label>Shopper?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are Suspended at the Pledge level.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are Suspended at the Pledge level.</inlineHelpText>
        <label>Force Suspended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Sustainer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving record and constituent as a Sustaining giver.</description>
        <inlineHelpText>Designates Giving record and constituent as a Sustaining giver.</inlineHelpText>
        <label>Sustainer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Tribute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates Giving as a Tribute.</description>
        <inlineHelpText>Designates Giving as a Tribute.</inlineHelpText>
        <label>Tribute?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Is_Uncollectible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a Giving Pledge and child Giving Transactions that are Uncollectible at the Pledge level.</description>
        <inlineHelpText>Denotes a Giving Pledge and child Giving Transactions that are Uncollectible at the Pledge level.</inlineHelpText>
        <label>Force Uncollectible?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Giving_Amount_Adjustment_Date__c</fullName>
        <description>Automatically populated, records the date on which the Last Giving Amount adjustment was made.</description>
        <inlineHelpText>Date on which the Last Giving Amount adjustment was made.</inlineHelpText>
        <label>Last Giving Amount Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Last_Giving_Amount_Adjustment__c</fullName>
        <description>Automatically Populated, records the delta in Giving Amounts from the Current Value to the Last Value stored in the record.</description>
        <inlineHelpText>Delta in Giving Amounts from the Current Value to the Last Value stored in the record.</inlineHelpText>
        <label>Last Giving Amount Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Letter_Of_Intent_Deadline__c</fullName>
        <description>Deadline to submit notification to donor that organization will be competing for this grant.</description>
        <inlineHelpText>Deadline to submit notification to donor that organization will be competing for this grant.</inlineHelpText>
        <label>Letter of Intent Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Link_2__c</fullName>
        <description>Additional grant info</description>
        <inlineHelpText>Additional grant info</inlineHelpText>
        <label>Link # 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Link_3__c</fullName>
        <description>Additional grant info</description>
        <inlineHelpText>Additional grant info</inlineHelpText>
        <label>Link # 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Link_4__c</fullName>
        <description>Additional grant info</description>
        <inlineHelpText>Additional grant info</inlineHelpText>
        <label>Link # 4</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account that will Match the gift, typically the employer of the associated Contact donor.</description>
        <inlineHelpText>Account that will Match the gift, typically the employer of the associated Contact donor.</inlineHelpText>
        <label>Matching Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Matching Gifts)</relationshipLabel>
        <relationshipName>Opportunities_Matching_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Amount__c</fullName>
        <description>Amount the Matching Account will match.</description>
        <inlineHelpText>Amount the Matching Account will match.</inlineHelpText>
        <label>Matching Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Notice__c</fullName>
        <description>Auto populated, displays an error related to the giving record if inconsistent with the matching rules provided on the related Account</description>
        <inlineHelpText>Displays an error related to the giving record if inconsistent with the matching rules provided on the related Account</inlineHelpText>
        <label>Matching Notice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity on Matching Account that matches the gift.</description>
        <inlineHelpText>Opportunity on Matching Account that matches the gift.</inlineHelpText>
        <label>Matching Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Matching Opportunity)</relationshipLabel>
        <relationshipName>Opportunities_Matching_Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Ratio_Type__c</fullName>
        <description>Displays Primary Matching Gift type for the Account. Value is updated based on &apos;Matching Ratio Type&apos; from Matching Ratio record where &apos;Primary&apos; is selected. The list is limited to the Matching Gift types on the Matching Account.</description>
        <inlineHelpText>Displays Primary Matching Gift type for the Account. Value is updated based on &apos;Matching Ratio Type&apos; from Matching Ratio record where &apos;Primary&apos; is selected. The list is limited to the Matching Gift types on the Matching Account.</inlineHelpText>
        <label>Matching Ratio Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retiree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Matching_Status__c</fullName>
        <description>Internal status of Matching Gift.</description>
        <inlineHelpText>Internal status of Matching Gift.</inlineHelpText>
        <label>Matching Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Amount_1__c</fullName>
        <description>Corporate Support field to track Amount of Media Type 1.</description>
        <inlineHelpText>Corporate Support field to track Amount of Media Type 1.</inlineHelpText>
        <label>Media Amount 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Amount_2__c</fullName>
        <description>Corporate Support field to track Amount of Media Type 2.</description>
        <inlineHelpText>Corporate Support field to track Amount of Media Type 2.</inlineHelpText>
        <label>Media Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Amount_3__c</fullName>
        <description>Corporate Support field to track Amount of Media Type 3.</description>
        <inlineHelpText>Corporate Support field to track Amount of Media Type 3.</inlineHelpText>
        <label>Media Amount 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Type_1__c</fullName>
        <label>Media Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Type_2__c</fullName>
        <label>Media Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Media_Type_3__c</fullName>
        <label>Media Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Notice_Of_Grant_Awarded_Date__c</fullName>
        <description>Date when notified that Grant is approved.</description>
        <inlineHelpText>Date when notified that Grant is approved.</inlineHelpText>
        <label>Notice Of Grant Awarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Number_Of_Shares__c</fullName>
        <description>Number of shares of security being donated.</description>
        <inlineHelpText>Number of shares of security being donated.</inlineHelpText>
        <label>Number Of Shares</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Amount__c</fullName>
        <description>Populated by trigger, displays the aggregated sum of Giving amounts that are not contributing to your forecast.</description>
        <inlineHelpText>Aggregated sum of Giving amounts that are not contributing to your forecast.</inlineHelpText>
        <label>Omitted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Bar__c</fullName>
        <description>Formula field providing the percentage of Giving amounts that are not contributing to your forecast.</description>
        <formula>IMAGE(&apos;/img/samples/color_red.gif&apos;, &apos;red&apos;, 10,  MIN(150, rC_Giving__Omitted_Ratio__c)) + &apos; &apos; + IF(rC_Giving__Omitted_Amount__c &lt; 0, &apos;-&apos;, &apos;&apos;) + TEXT(rC_Giving__Omitted_Ratio__c) + &apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Giving amounts that are not contributing to your forecast.</inlineHelpText>
        <label>Omitted Bar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Omitted_Ratio__c</fullName>
        <description>Formula field providing the percentage of Giving amounts that are not contributing to your forecast.</description>
        <formula>IF(BLANKVALUE(rC_Giving__Expected_Giving_Amount__c, 0) == 0, 0, ABS(CEILING(100 * BLANKVALUE(rC_Giving__Omitted_Amount__c, 0) / rC_Giving__Expected_Giving_Amount__c)))</formula>
        <inlineHelpText>Percentage of Giving amounts that are not contributing to your forecast.</inlineHelpText>
        <label>Omitted Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Original_Summary__c</fullName>
        <description>the original summary associated with a gift that no longer exists.  This is set during the aggregation process and should only be populated if the summary is aggregated.</description>
        <inlineHelpText>On a gift associated with an aggregated summary, the original summary associated with a gift (which is deleted).</inlineHelpText>
        <label>Original Summary</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Parent_Name__c</fullName>
        <description>Name of the record from Parent Opportunity lookup.</description>
        <formula>rC_Giving__Parent__r.Name</formula>
        <inlineHelpText>Name of the record from Parent Opportunity lookup.</inlineHelpText>
        <label>Parent Opportunity: Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays existing Proposals from Account or Primary Contact.The field will be read-only when no Proposal exist.</description>
        <inlineHelpText>Link to the Parent Opportunity or Pledge.</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Giving/Transactions</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payer_Name__c</fullName>
        <description>Auto Populated name of the Payor of a transaction.</description>
        <inlineHelpText>Name of the Payor of a transaction.</inlineHelpText>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_Count__c</fullName>
        <description>Number of payments that will be included in a Irregular membership / donation.</description>
        <inlineHelpText>Number of payments for Irregular frequency.</inlineHelpText>
        <label>Payment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_Day__c</fullName>
        <description>Day of the month when a payments will be scheduled for future transactions.</description>
        <inlineHelpText>Day of the month when a payments will be scheduled for future transactions.</inlineHelpText>
        <label>Payment Day</label>
        <picklist>
            <controllingField>rC_Giving__Payment_Frequency__c</controllingField>
            <picklistValues>
                <fullName>1st</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28th</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_End_Date__c</fullName>
        <description>Last day payments can be scheduled. (If a donor pledges $10/month on 6/1/2012 with a Payment End Date of 8/1/2013,  the last payment will be made on 8/1/2013 with a total giving of $140)</description>
        <inlineHelpText>Last day payments can be scheduled. (If a donor pledges $10/month on 6/1/2012 with a Payment End Date of 8/1/2013,  the last payment will be made on 8/1/2013 with a total giving of $140)</inlineHelpText>
        <label>Payment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_Frequency__c</fullName>
        <description>Expected timing of payments from donor.</description>
        <inlineHelpText>Expected timing of payments from donor.</inlineHelpText>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>One Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Payment_Method_Selected__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Default Payment Method chosen for this Giving record. Open Transactions will be updated if a new Payment Method is selected here.</description>
        <inlineHelpText>Default Payment Method chosen for this Giving record. Open Transactions will be updated if a new Payment Method is selected here.</inlineHelpText>
        <label>Selected Payment Method</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>rC_Giving__Payment_Method__c.rC_Giving__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rC_Giving__Payment_Method__c</referenceTo>
        <relationshipLabel>Giving</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>